--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,4 +44,22 @@ a {
     color: #ff006e;
 }
 
+.goalContainer {
+    border: 2px solid #dedede;
+    background-color: bisque;
+    border-radius: 5px;
+    padding: 16px;
+    margin: 10px 0;
+    padding-bottom: 25px;
+    margin-top: 10px; 
+    margin-left: 8px;
+    margin-bottom: 10px;
+    color: black;
+}
+
+.taskText {
+    color: black;
+    font-size: xx-large;
+}
+
 
